# Option3

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/option3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/java/com/example/option3/: MainActivity.java  MainClass.java  PublicKeyDownloader.java
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/option3/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
